<?xml version="1.0" encoding="utf-8"?>

<!-- This is the XML code for the Home Fragment-->
<!-- I haven't deeply commented this page because all the items I used on this page are self explanatory-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".HomeFragment" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="394dp"
        android:layout_height="59dp"
        android:background="@android:color/holo_orange_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />


    <TextView
        android:id="@+id/Hello_heading"
        android:layout_width="358dp"
        android:layout_height="67dp"
        android:fontFamily="monospace"
        android:text="@string/hello_world_title"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="245dp"
        android:layout_height="60dp"
        android:fontFamily="monospace"
        android:text="@string/underline"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Greetings_subheading2"
        android:layout_width="347dp"
        android:layout_height="96dp"
        android:fontFamily="casual"
        android:text="@string/home_page_greeting"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Greetings_subheading1"
        android:layout_width="230dp"
        android:layout_height="41dp"
        android:fontFamily="casual"
        android:text="@string/hello"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="73dp"
        android:layout_height="82dp"
        android:text="@string/open_bracket"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <Button
        android:id="@+id/Bib_home_button"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:fontFamily="monospace"
        android:text="@string/biography_button"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="69dp"
        android:layout_height="82dp"
        android:text="@string/comma"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.792"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Proj_home_button"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:fontFamily="monospace"
        android:text="@string/projects_button"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="69dp"
        android:layout_height="82dp"
        android:text="@string/comma"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.792"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Contact_home_button"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:fontFamily="monospace"
        android:text="@string/contact_me_button"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.699"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="69dp"
        android:layout_height="82dp"
        android:text="@string/comma"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.792"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.728"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Options_home_button"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:fontFamily="monospace"
        android:text="@string/options_button"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="72dp"
        android:layout_height="92dp"
        android:text="@string/close_bracket"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>